--- a/_posts/2021-02-04-de-hadoop-ch14.md
+++ b/_posts/2021-02-04-de-hadoop-ch14.md
@@ -1,36 +1,30 @@
 ---
 layout: post
-title: '[Hadoop] 시작하세요 하둡 프로그래밍 CH 6 정렬 part2:보조 정렬 실행 및 부분 정렬'
-subtitle: 'Hadoop CH 6 정렬 part2:보조 정렬 실행 및 부분 정렬'
+title: '[Hadoop] 시작하세요 하둡 프로그래밍 CH 14 얀 애플리케이션 개발'
+subtitle: 'Hadoop CH 14 얀 애플리케이션 개발'
 categories: de
 tags: hadoop
 comments: true
 ---
-`시작하세요 하둡 프로그래밍`을 기반으로 공부한 내용을 정리합니다. - CH6 part2:보조 정렬 실행 및 부분 정렬
+`시작하세요 하둡 프로그래밍`을 기반으로 공부한 내용을 정리합니다. - CH 14 얀 애플리케이션 개발
 
 ![img](/assets/img/post/hadoop/hadoop_book.png)
 
-## 보조 정렬 실행
+## 얀 어플리케이션 개발
 
-- 추후 보강
+얀 클러스터에서 동작하는 간단한 애플리케이션을 알아봅니다.
 
-### 부분 정렬(Partial Sort)
+### Yarn Concepts and Applications
 
-부분 정렬(Partial Sort)은 매퍼의 출력 데이터를 변경해 정렬하여 원하는 키의 데이터를 검색하는 방법입니다.
+애플리케이션 실행을 요청하는 클라이언트, 애플리케이션을 관리하는 애플리케이션 마스터, 노드메니저에서 실행되는 애플리케이션으로 구성됩니다.
 
-![img](/assets/img/post/hadoop/2021-1-28-hadoop-6-0.png)
+![img](/assets/img/post/hadoop/2021-2-04-hadoop-14-0.png)
 
-- Mapper의 출력 데이터를 맵파일(Mapfile) 형태로 변경
+위 그림은 세 종류의 클래스가 얀 클러스터에서 어떻게 동작하는지 알 수 있습니다.
 
-- Partitioner는 Mapper의 출력 데이터가 어떤 Reduce task로 전달될지 결정
+다음과 같은 순서로 동작합니다.
 
-- Partitioning된 데이터는 키에 따라 정렬
-
-- 특정 키에 대한 데이터를 검색할 때, 해당 키에 대한 데이터가 저장되어 있는 맵파일(Mapfile)에 접근해서 데이터를 조회
-
-항공 지연 데이터를 항공 운항 거리 순서대로 정렬하는 부분 정렬 프로그램은 다음과 같은 과정으로 구현합니다.
-
-1. 입력 데이터를 시퀀스 파일로 생성합니다.
+1. 클라이언트는 리소스매니저에게 신규 애플리케이션 ID를 요청합니다.
 
 2. 시퀀스 파일을 맵파일(Mapfile)로 변경합니다.
 
