--- a/_posts/2021-01-19-de-hadoop-0.md
+++ b/_posts/2021-01-19-de-hadoop-0.md
@@ -17,7 +17,7 @@ comments: true
 
 ## STEP 0
 
-윈도우에서 wsl2 및 도커 데스크탑을 설치합니다. 
+윈도우에서 wsl2 및 도커 데스크탑을 설치합니다.
 기본적으로 도커를 사용할 수 있다는 전제하에 post를 작성하겠습니다.
 
 ## STEP 1
@@ -26,11 +26,11 @@ comments: true
 
     ![img](/assets/img/post/hadoop/2021-1-19-hadoop-0-0.png)
 
-2. 이후 `docker compose up -d`를 실행합니다.
+2. 이후 `docker-compose up -d`를 실행합니다.
 
-    - **docker compose**는 여러 개의 컨테이너(container)로 구성된 애플리케이션을 관리하기 위한 간단한 오케스트레이션(Orchestration) 도구입니다.
+    - **docker-compose**는 여러 개의 컨테이너(container)로 구성된 애플리케이션을 관리하기 위한 간단한 오케스트레이션(Orchestration) 도구입니다.
 
-    - **docker compose up**은 Docker Compose에 정의되어 있는 모든 서비스 컨테이너를 한 번에 생성하고 실행하기 위해서 사용합니다.
+    - **docker-compose up**은 Docker Compose에 정의되어 있는 모든 서비스 컨테이너를 한 번에 생성하고 실행하기 위해서 사용합니다.
 
     - 이때 **-d** 옵션이 붙으면, 백그라운드에서 컨테이너를 띄울 수 있습니다.
 
@@ -109,7 +109,7 @@ comments: true
 
 9. jar 파일 실행
 
-    - 하둡 실행 방법은 아래와 같습니다. 
+    - 하둡 실행 방법은 아래와 같습니다.
     - hadoop jar [Host jar파일] [패키지명/소스명] [입력hdfs 경로] [축력hdfs 경로]
     - 예제) hadoop jar $HADOOP_HOME/share/hadoop/mapreduce/hadoop-mapreduce-examples-3.3.0.jar wordcount input/bible.txt output/bile_gpu
     - 우리는 `hadoop jar hadoop-mapreduce-examples-3.2.1-sources.jar org.apache.hadoop.examples.WordCount input output`을 사용합니다.
